--- a/networking/Cargo.toml
+++ b/networking/Cargo.toml
@@ -2,6 +2,7 @@
 name = "networking"
 version = "0.1.0"
 authors = ["Sebastian Waisbrot <seppo0010@gmail.com>"]
+edition = "2018"
 
 [dependencies.config]
 path = "../config"
@@ -26,6 +27,7 @@ path = "../command"
 
 [dependencies]
 net2 = { version = "0.2.2", features = ["nightly"] }
+tokio = { version = "0.2.13", features = ["full"] }
 
 [target.x86_64-unknown-linux-gnu.dependencies]
 libc ="0.1.8"
