--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ edition = "2018"
 name = "rsedis"
 doc = false
 
+[dependencies]
+tokio = { version = "0.2.13", features = ["full"] }
+
 [dependencies.config]
 path = "config"
 
